--- a/pdf_warp_template.css
+++ b/pdf_warp_template.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: #151719;
+  background-color: #ddd;
 }
 
 .pdf-container {
@@ -21,9 +21,51 @@
   display: inline-block;
 }
 
+.draggable:hover {
+  background-color: #ccc;
+}
+
 .pdf-toolbar {
   position: absolute;
   height: 200px;
-  width: 100px;
-  background-color: #fef5f1;
+  width: 200px;
+  margin-left: 10px;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.selected {
+  -webkit-box-shadow: inset 0px 0px 0px 1px #000;
+  -moz-box-shadow: inset 0px 0px 0px 1px #000;
+  box-shadow: inset 0px 0px 0px 1px #000;
+}
+
+.inline {
+  display: inline-block;
+}
+
+.none {
+  display: none;
+}
+
+.pdf-option-input {
+  height: 20px;
+  width: 50px;
+}
+
+.options-container {
+  margin-bottom: 10px;
+}
+
+.additional-options {
+  text-align: left;
+}
+
+.textCenter {
+  text-align: center;
+}
+
+img{
+  width: 100%;
+  height: 100%;
 }
