--- a/css/pdf_warp_template.css
+++ b/css/pdf_warp_template.css
@@ -56,6 +56,7 @@
 
 .options-container {
   margin-bottom: 10px;
+  text-align: left;
 }
 
 .additional-options {
@@ -66,7 +67,7 @@
   text-align: center;
 }
 
-img{
+img {
   width: 100%;
   height: 100%;
 }
